--- a/catalog.html
+++ b/catalog.html
@@ -8,44 +8,44 @@
 
 <body class="page catalog-page">
 <header class="header">
-  <a class="logo logo__header" href="index.html">
+  <a class="header__logo logo" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
-    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40"
+    <img class="header__toggle-img" src="https://via.placeholder.com/" width="40" height="40"
          alt="Открыть или закрыть меню">
     <span class="visually-hidden">Открыть или закрыть меню</span>
   </button>
 
   <section class="menu-nav">
-    <ul class="site-nav">
+    <ul class="menu-nav__list site-nav">
       <li class="site-nav__item">
-        <a class="site-nav-link" href="#">О сервисе</a>
+        <a class="site-nav__link" href="index.html">О сервисе</a>
       </li>
       <li class="site-nav__item">
-        <a class="site-nav-link" href="form.html">Направления</a>
+        <a class="site-nav__link" href="form.html">Направления</a>
       </li>
       <li class="site-nav__item">
-        <a class="site-nav-link" href="catalog.html">Попутчики</a>
+        <a class="site-nav__link">Попутчики</a>
       </li>
     </ul>
-    <ul class="user-nav__list user-nav__list--menu-nav">
+    <ul class="menu-nav__list user-nav">
       <li class="user-nav__item">
-        <a class="button user-nav__button js-login" href="#">Авторизация</a>
+        <a class="button user-nav__btn js-login" href="#">Авторизация</a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
-          <img class="user-nav__list__tel-img" src="https://via.placeholder.com/" width="40" height="40"
+        <a class="user-nav__tel" href="tel:+749511111111">
+          <img class="user-nav__tel-img" src="https://via.placeholder.com/" width="40" height="40"
                alt="Наш телефон">
-          <span class="visually-hidden">Наш телефон</span>
+          <span class="visually-hidden">Телефон +749511111111</span>
         </a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__list__mail" href="mailto:go@gmail.com" aria-label="Электронный адрес go@gmail.com">
+        <a class="user-nav__mail" href="mailto:go@gmail.com">
           <img class="user-nav__mail-img" src="https://via.placeholder.com/" width="40" height="40"
                alt="Наша электронная почта">
-          <span class="visually-hidden">Наша электронная почта</span>
+          <span class="visually-hidden">Электронный адрес go@gmail.com</span>
         </a>
       </li>
     </ul>
@@ -60,15 +60,12 @@
     <div class="card">
       <h2 class="visually-hidden">Карточка пользователя</h2>
       <img class="card__avatar" src="https://via.placeholder.com/" width="40" height="40" alt="Аватарка">
-      <ul class="user-radio">
-        <li class="user-radio__like user-radio--off">
-          <label for="like-Tanya">
-            <input type="radio" name="like" class="user-radio__input" value="like"
+      <div class="card__likes like-btn">
+          <label class="like-btn__btn" for="like-Tanya">
+            <input type="radio" name="like" class="like-btn__input" value="like"
                    id="like-Tanya" checked>
-            <span class="radio-box"></span>
           </label>
-        </li>
-      </ul>
+      </div>
       <h3 class="card__name">Таня Фирсова</h3>
       <span class="card__status" aria-label="онлайн статус"></span>
       <span class="card__remoteness" aria-label="Удаленность">1,5 м</span>
@@ -91,7 +88,7 @@
         <h4 class="card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
             <span class="visually-hidden">Самолет</span>
           </li>
@@ -101,7 +98,7 @@
             <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+            <img class="transport-list__img transport-list__img--bicycle transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
             <span class="visually-hidden">Велосипед</span>
           </li>
@@ -113,7 +110,7 @@
         </ul>
       </div>
       <div class="card__wrapper">
-        <h4 class="card__subtitle card__subtitle--main">левел:</h4>
+        <h4 class="card__subtitle">левел:</h4>
         <div class="level">
           <div class="level__count">99</div>
           <!--Будет скрыто стилями
@@ -121,21 +118,18 @@
           -->
         </div>
       </div>
-      <a class="button card__button" href="#">Позвать!</a>
+      <a class="button card__btn" href="#">Позвать!</a>
     </div>
 
     <div class="card">
       <h2 class="visually-hidden">Карточка пользователя</h2>
       <img class="card__avatar" src="https://via.placeholder.com/" width="40" height="40" alt="Аватарка">
-      <ul class="user-radio">
-        <li class="user-radio__like user-radio--on user-radio--off">
-          <label for="like-Petr">
-            <input type="radio" name="like" class="user-radio__input" value="like"
+      <div class="card__likes like-btn">
+        <label class="like-btn__btn" for="like-Petr">
+          <input type="radio" name="like" class="like-btn__input" value="like"
                    id="like-Petr">
-            <span class="radio-box"></span>
           </label>
-        </li>
-      </ul>
+      </div>
       <h3 class="card__name">Петя Демин</h3>
       <span class="card__status" aria-label="онлайн статус"></span>
       <span class="card__remoteness" aria-label="Удаленность">1500</span>
@@ -151,11 +145,11 @@
           </li>
         </ul>
       </div>
-      <div class="card_wrapper">
+      <div class="card__wrapper">
         <h4 class="card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
             <span class="visually-hidden">Самолет</span>
           </li>
@@ -165,7 +159,7 @@
             <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+            <img class="transport-list__img transport-list__img--bicycle transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
             <span class="visually-hidden">Велосипед</span>
           </li>
@@ -177,7 +171,7 @@
         </ul>
       </div>
       <div class="card__wrapper">
-        <h4 class="card__subtitle card__subtitle--main">левел:</h4>
+        <h4 class="card__subtitle">левел:</h4>
         <div class="level">
           <div class="level__count">80</div>
           <!--Будет скрыто стилями
@@ -185,21 +179,18 @@
           -->
         </div>
       </div>
-      <a class="button card__button" href="#">Позвать!</a>
+      <a class="button card__btn" href="#">Позвать!</a>
     </div>
 
     <div class="card">
       <h2 class="visually-hidden">Карточка пользователя</h2>
       <img class="card__avatar" src="https://via.placeholder.com/" width="40" height="40" alt="Аватарка">
-      <ul class="user-radio">
-        <li class="user-radio__like user-radio--on user-radio--off">
-          <label for="like-Mark">
-            <input type="radio" name="like" class="user-radio__input" value="like"
+      <div class="card__likes like-btn">
+        <label class="like-btn__btn" for="like-Mark">
+          <input type="radio" name="like" class="like-btn__input" value="like"
                    id="like-Mark">
-            <span class="radio-box"></span>
           </label>
-        </li>
-      </ul>
+      </div>
       <h3 class="card__name">Марк Смолов</h3>
       <span class="card__status" aria-label="онлайн статус"></span>
       <span class="card__remoteness" aria-label="Удаленность">170</span>
@@ -207,7 +198,9 @@
       <div class="card_wrapper">
         <h4 class="card__title">хочет посетить:</h4>
         <ul class="card__list">
-          <li class="card__item">США</li>
+          <li class="card__item">
+            <span>США</span>
+          </li>
           <li class="card__item">
             <span>Австралия</span>
           </li>
@@ -220,7 +213,7 @@
         <h4 class="card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
             <span class="visually-hidden">Самолет</span>
           </li>
@@ -230,7 +223,7 @@
             <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+            <img class="transport-list__img transport-list__img--bicycle transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
             <span class="visually-hidden">Велосипед</span>
           </li>
@@ -242,7 +235,7 @@
         </ul>
       </div>
       <div class="card__wrapper">
-        <h4 class="card__subtitle card__subtitle--main">левел:</h4>
+        <h4 class="card__subtitle">левел:</h4>
         <div class="level">
           <div class="level__count">25</div>
           <!--Будет скрыто стилями
@@ -250,21 +243,18 @@
           -->
         </div>
       </div>
-      <a class="button card__button" href="#">Позвать!</a>
+      <a class="button card__btn" href="#">Позвать!</a>
     </div>
 
     <div class="card">
       <h2 class="visually-hidden">Карточка пользователя</h2>
       <img class="card__avatar" src="https://via.placeholder.com/" width="40" height="40" alt="Аватарка">
-      <ul class="user-radio">
-        <li class="user-radio__like user-radio--on user-radio--off">
-          <label for="like-Larisa">
-            <input type="radio" name="like" class="user-radio__input" value="like"
+      <div class="card__likes like-btn">
+        <label class="like-btn__btn" for="like-Larisa">
+          <input type="radio" name="like" class="like-btn__input" value="like"
                    id="like-Larisa">
-            <span class="radio-box"></span>
           </label>
-        </li>
-      </ul>
+      </div>
       <h3 class="card__name">Лариса Роговая</h3>
       <span class="card__status" aria-label="онлайн статус"></span>
       <span class="card__remoteness" aria-label="Удаленность">23</span>
@@ -273,7 +263,7 @@
         <h4 class="card__title">хочет посетить:</h4>
         <ul class="card__list">
           <li class="card__item"><
-            span>Великобритания</span>
+            <span>Великобритания</span>
           </li>
           <li class="card__item">
             <span>Германия</span>
@@ -284,7 +274,7 @@
         <h4 class="card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
             <span class="visually-hidden">Самолет</span>
           </li>
@@ -294,7 +284,7 @@
             <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+            <img class="transport-list__img transport-list__img--bicycle transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
             <span class="visually-hidden">Велосипед</span>
           </li>
@@ -306,7 +296,7 @@
         </ul>
       </div>
       <div class="card__wrapper">
-        <h4 class="card__subtitle card__subtitle--main">левел:</h4>
+        <h4 class="card__subtitle">левел:</h4>
         <div class="level">
           <div class="level__count">50</div>
           <!--Будет скрыто стилями
@@ -314,7 +304,7 @@
           -->
         </div>
       </div>
-      <a class="button card__button" href="#">Позвать!</a>
+      <a class="button card__btn" href="#">Позвать!</a>
     </div>
     <a class="cards__link" href="#">Показать еще</a>
     <section class="pagination">
@@ -325,7 +315,7 @@
 </main>
 
 <footer class="footer">
-  <a class="logo logo--footer" href="index.html">
+  <a class="footer__logo logo" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
