--- a/form.html
+++ b/form.html
@@ -8,44 +8,44 @@
 
 <body class="page form-page">
 <header class="header">
-  <a class="logo logo__header" href="index.html">
+  <a class="header__logo logo" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
-    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40"
+    <img class="header__toggle-img" src="https://via.placeholder.com/" width="40" height="40"
          alt="Открыть или закрыть меню">
     <span class="visually-hidden">Открыть или закрыть меню</span>
   </button>
 
   <section class="menu-nav">
-    <ul class="site-nav">
+    <ul class="menu-nav__list site-nav">
       <li class="site-nav__item">
-        <a class="site-nav-link" href="#">О сервисе</a>
+        <a class="site-nav__link" href="index.html">О сервисе</a>
       </li>
       <li class="site-nav__item">
-        <a class="site-nav-link" href="form.html">Направления</a>
+        <a class="site-nav__link">Направления</a>
       </li>
       <li class="site-nav__item">
-        <a class="site-nav-link" href="catalog.html">Попутчики</a>
+        <a class="site-nav__link" href="catalog.html">Попутчики</a>
       </li>
     </ul>
-    <ul class="user-nav__list user-nav__list--menu-nav">
+    <ul class="menu-nav__list user-nav">
       <li class="user-nav__item">
-        <a class="button user-nav__button js-login" href="#">Авторизация</a>
+        <a class="button user-nav__btn js-login" href="#">Авторизация</a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
-          <img class="user-nav__list__tel-img" src="https://via.placeholder.com/" width="40" height="40"
+        <a class="user-nav__tel" href="tel:+749511111111">
+          <img class="user-nav__tel-img" src="https://via.placeholder.com/" width="40" height="40"
                alt="Наш телефон">
-          <span class="visually-hidden">Наш телефон</span>
+          <span class="visually-hidden">Телефон +749511111111</span>
         </a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__list__mail" href="mailto:go@gmail.com" aria-label="Электронный адрес go@gmail.com">
+        <a class="user-nav__mail" href="mailto:go@gmail.com">
           <img class="user-nav__mail-img" src="https://via.placeholder.com/" width="40" height="40"
                alt="Наша электронная почта">
-          <span class="visually-hidden">Наша электронная почта</span>
+          <span class="visually-hidden">Электронный адрес go@gmail.com</span>
         </a>
       </li>
     </ul>
@@ -59,7 +59,7 @@
 </main>
 
 <footer class="footer">
-  <a class="logo logo--footer" href="index.html">
+  <a class="footer__logo logo" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
