--- a/index.html
+++ b/index.html
@@ -8,44 +8,44 @@
 
 <body class="page">
 <header class="header">
-  <a class="logo logo--header">
+  <a class="header__logo logo">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
-    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40"
+    <img class="header__toggle-img" src="https://via.placeholder.com/" width="40" height="40"
          alt="Открыть или закрыть меню">
     <span class="visually-hidden">Открыть или закрыть меню</span>
   </button>
 
   <section class="menu-nav">
-    <ul class="site-nav">
+    <ul class="menu-nav__list site-nav">
       <li class="site-nav__item">
-        <a class="site-nav-link" href="#">О сервисе</a>
+        <a class="site-nav__link">О сервисе</a>
       </li>
       <li class="site-nav__item">
-        <a class="site-nav-link" href="form.html">Направления</a>
+        <a class="site-nav__link" href="form.html">Направления</a>
       </li>
       <li class="site-nav__item">
-        <a class="site-nav-link" href="catalog.html">Попутчики</a>
+        <a class="site-nav__link" href="catalog.html">Попутчики</a>
       </li>
     </ul>
-    <ul class="user-nav__list user-nav__list--menu-nav">
+    <ul class="menu-nav__list user-nav">
       <li class="user-nav__item">
-        <a class="button user-nav__button js-login" href="#">Авторизация</a>
+        <a class="button user-nav__btn js-login" href="#">Авторизация</a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
-          <img class="user-nav__list__tel-img" src="https://via.placeholder.com/" width="40" height="40"
+        <a class="user-nav__tel" href="tel:+749511111111">
+          <img class="user-nav__tel-img" src="https://via.placeholder.com/" width="40" height="40"
                alt="Наш телефон">
-          <span class="visually-hidden">Наш телефон</span>
+          <span class="visually-hidden">Телефон +749511111111</span>
         </a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__list__mail" href="mailto:go@gmail.com" aria-label="Электронный адрес go@gmail.com">
+        <a class="user-nav__mail" href="mailto:go@gmail.com">
           <img class="user-nav__mail-img" src="https://via.placeholder.com/" width="40" height="40"
                alt="Наша электронная почта">
-          <span class="visually-hidden">Наша электронная почта</span>
+          <span class="visually-hidden">Электронный адрес go@gmail.com</span>
         </a>
       </li>
     </ul>
@@ -56,13 +56,13 @@
   <section class="main-nav">
     <h1 class="main-nav__title">В путешествие с крутыми попутчиками!</h1>
     <nav class="user-nav">
-      <ul class="user-nav__list user-nav__list--main-nav">
+      <ul class="user-nav__list">
         <li class="user-nav__item">
-          <a class="button user-nav__button js-login" href="#">Авторизация</a>
+          <a class="button user-nav__btn js-login" href="#">Авторизация</a>
         </li>
         <li class="user-nav__item">
-          <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
-            <img class="user-nav__list__tel-img" src="https://via.placeholder.com/" width="40" height="40"
+          <a class="user-nav__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
+            <img class="user-nav__tel-img" src="https://via.placeholder.com/" width="40" height="40"
                  alt="Наш телефон">
             <span class="visually-hidden">Наш телефон</span>
           </a>
@@ -89,9 +89,9 @@
     <h2 class="visually-hidden">Последовательность действий</h2>
     <ol class="sequencing__list">
       <li class="sequencing__item">Выберите направление</li>
-      <li class="sequencing__item">Изучите идеи <br> путешественников</li>
-      <li class="sequencing__item">Находите тех, <br> кто похож на вас</li>
-      <li class="sequencing__item">Путешествуйте <br> вместе!</li>
+      <li class="sequencing__item">Изучите идеи<br>путешественников</li>
+      <li class="sequencing__item">Находите тех,<br>кто похож на вас</li>
+      <li class="sequencing__item">Путешествуйте<br>вместе!</li>
     </ol>
   </section>
 
@@ -106,27 +106,27 @@
     <h2 class="direction__title">Направления</h2>
     <p>Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там
       заняться.</p>
-    <ul class="direction__list country-list">
-      <li class="country-list__item">
-        <img class="country-list__img" src="https://via.placeholder.com/" width="40" height="40" alt="Tаиланд">
-        <h3 class="country-list__country country-list__country--thailand">Таиланд</h3>
-        <b class="country-list__quantity">18321</b>
-        <b class="country-list__tagline">Джунгли зовут!</b>
+    <ul class="direction__list">
+      <li class="direction__item">
+        <img class="direction__img" src="https://via.placeholder.com/" width="40" height="40" alt="Tаиланд">
+        <h3 class="direction__country direction__country--thailand">Таиланд</h3>
+        <b class="direction__quantity">18321</b>
+        <b class="direction__tagline">Джунгли зовут!</b>
       </li>
-      <li class="direction__item country-list">
-        <img class="country-list__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фраанция">
-        <h3 class="country-list__country country-list__country--france">Франция</h3>
-        <b class="country-list__quantity">18321</b>
-        <b class="country-list__tagline">Трэ бьен, манифик!</b>
+      <li class="direction__item">
+        <img class="direction__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фраанция">
+        <h3 class="direction__country direction__country--france">Франция</h3>
+        <b class="direction__quantity">18321</b>
+        <b class="direction__tagline">Трэ бьен, манифик!</b>
       </li>
-      <li class="direction__item country-list">
-        <img class="country-list__img" src="https://via.placeholder.com/" width="40" height="40" alt="Чехия">
-        <h3 class="country-list__country country-list__country--czech">Чехия</h3>
-        <b class="country-list__quantity">18321</b>
-        <b class="country-list__tagline">Закоулки старой Европы</b>
+      <li class="direction__item">
+        <img class="direction__img" src="https://via.placeholder.com/" width="40" height="40" alt="Чехия">
+        <h3 class="direction__country direction__country--czech">Чехия</h3>
+        <b class="direction__quantity">18321</b>
+        <b class="direction__tagline">Закоулки старой Европы</b>
       </li>
     </ul>
-    <a class="button direction__button" href="#">Показать все</a>
+    <a class="button direction__btn" href="#">Показать все</a>
   </section>
 
   <section class="site-users">
@@ -137,73 +137,59 @@
       <b class="travelers__tagline">Теперь можно легко найти единомышленников!</b>
     </div>
 
-    <div class="user-card user-card--main">
+    <div class="card card--big-avatar">
       <h2 class="visually-hidden">Карточка пользователя</h2>
-      <img class="user-card__avatar user-card__avatar--main" src="https://via.placeholder.com/" width="140" height="140"
+      <img class="card__avatar card__avatar--big" src="https://via.placeholder.com/" width="140" height="140"
            alt="Аватарка">
-      <!--Будет скрыто стилями
-            <ul class="user-radio">
-              <li class="user-radio__like user-radio--off">
-                <label for="like-Tanya">
-                  <input type="radio" name="like" class="user-radio__input" value="like"
-                         id="like-Tanya" checked>
-                  <span class="radio-box"></span>
-                </label>
-              </li>
-            </ul>
-            -->
-      <h3 class="card__name card__name--main">Таня Фирсова</h3>
-      <span class="card__status card__status--main" aria-label="онлайн статус"></span>
-      <!--Будет скрыто стилями
-      <span class="card__remoteness" aria-label="Удаленность">1,5 м</span>
-      -->
+      <h3 class="card__name card__name">Таня Фирсова</h3>
+      <span class="card__status" aria-label="онлайн статус"></span>
       <p class="card__hash-tag">#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
       <div class="card__wrapper">
         <!--Будет скрыто стилями
         <h4 class="card__title">хочет посетить:</h4>
         -->
-        <ul class="card__list card__list--main">
-          <li class="card__item card__item--main">
+        <ul class="card__list">
+          <li class="card__item">
             <span>Шри-ланка</span>
           </li>
-          <li class="card__item card__item--main">
+          <li class="card__item">
             <span>Тайланд</span>
           </li>
-          <li class="card__item card__item--main">
+          <li class="card__item">
             <span>Сейшелы</span>
           </li>
         </ul>
       </div>
-      <div class="card__wrapper card__wrapper--main">
+      <div class="card__wrapper">
         <!--Будет скрыто стилями
         <h4 class="card__transport">транспорт:</h4>
         -->
-        <ul class="transport-list transport-list--main">
-          <li class="transport-list__item transport-list__item--main">
-            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
+        <ul class="transport-list transport-list--left">
+          <li class="transport-list__item">
+            <img class="transport-list__img transport-list__img--plane transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
             <span class="visually-hidden">Самолет</span>
           </li>
-          <li class="transport-list__item transport-list__item--main">
+          <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
                  height="40" alt="автобус">
             <span class="visually-hidden">Автобус</span>
           </li>
-          <li class="transport-list__item transport-list__item--main">
-            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+          <li class="transport-list__item">
+            <img class="transport-list__img transport-list__img--bicycle transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
             <span class="visually-hidden">Велосипед</span>
           </li>
-          <li class="transport-list__item transport-list__item--main">
+          <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
                  height="40" alt="пешком">
             <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
-      <div class="card__wrapper card__wrapper--main">
+      <div class="card__wrapper">
         <!--Будет скрыто стилями
-        <h4 class="card__subtitle card__subtitle--main">левел:</h4>
+        <h4 class="card__subtitle">левел:</h4>
         -->
         <div class="level">
           <div class="level__count">99</div>
@@ -211,74 +197,60 @@
         </div>
       </div>
       <!--Будет скрыто стилями
-      <a class="button card__button" href="#">Позвать!</a>
+      <a class="button card__btn" href="#">Позвать!</a>
       -->
     </div>
 
-    <div class="card card--main">
+    <div class="card card--big-avatar">
       <h2 class="visually-hidden">Карточка пользователя</h2>
-      <img class="card__avatar card__avatar--main" src="https://via.placeholder.com/" width="40" height="40"
+      <img class="card__avatar card__avatar--big" src="https://via.placeholder.com/" width="40" height="40"
            alt="Аватарка">
-      <!--Будет скрыто стилями
-      <ul class="user-radio">
-        <li class="user-radio__like user-radio--on user-radio--off">
-          <label for="like-Petr">
-            <input type="radio" name="like" class="user-radio__input" value="like"
-                   id="like-Petr">
-            <span class="radio-box"></span>
-          </label>
-        </li>
-      </ul>
-      -->
-      <h3 class="card__name card__name--main">Петя Демин</h3>
-      <span class="card__status card__status--main" aria-label="онлайн статус"></span>
-      <!--Будет скрыто стилями
-      <span class="card__remoteness" aria-label="Удаленность">1500</span>
-      -->
-      <p class="card__hash-tag card__hash-tag--main">#бургер #бар #футбол #концерт #крафт</p>
-      <div class="card__wrapper card__wrapper--main">
+      <h3 class="card__name">Петя Демин</h3>
+      <span class="card__status" aria-label="онлайн статус"></span>
+      <p class="card__hash-tag">#бургер #бар #футбол #концерт #крафт</p>
+      <div class="card__wrapper">
         <!--Будет скрыто стилями
         <h4 class="card__title">хочет посетить:</h4>
         -->
-        <ul class="card__list card__list--main">
-          <li class="card__item card__item--main">
+        <ul class="card__list">
+          <li class="card__item">
             <span>Бельгия</span>
           </li>
-          <li class="card__item card__item--main">
+          <li class="card__item">
             <span>Чехия</span>
           </li>
         </ul>
       </div>
-      <div class="card_wrapper card_wrapper--main">
+      <div class="card_wrapper">
         <!--Будет скрыто стилями
         <h4 class="card__transport">транспорт:</h4>
         -->
-        <ul class="transport-list transport-list--main">
-          <li class="transport-list__item transport-list__item--main">
-            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
+        <ul class="transport-list transport-list--left">
+          <li class="transport-list__item">
+            <img class="transport-list__img transport-list__img--plane transport-list__img--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
             <span class="visually-hidden">Самолет</span>
           </li>
-          <li class="transport-list__item transport-list__item--main">
+          <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
                  height="40" alt="автобус">
             <span class="visually-hidden">Автобус</span>
           </li>
-          <li class="transport-list__item transport-list__item--main">
-            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+          <li class="transport-list__item">
+            <img class="transport-list__img transport-list__img--bicycle transport-list--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
             <span class="visually-hidden">Велосипед</span>
           </li>
-          <li class="transport-list__item transport-list__item--main">
+          <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
                  height="40" alt="пешком">
             <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
-      <div class="card__wrapper card__wrapper--main">
+      <div class="card__wrapper">
         <!--Будет скрыто стилями
-        <h4 class="card__subtitle card__subtitle--main">левел:</h4>
+        <h4 class="card__subtitle">левел:</h4>
         -->
         <div class="level">
           <div class="level__count">80</div>
@@ -286,11 +258,11 @@
         </div>
       </div>
       <!--Будет скрыто стилями
-      <a class="button card__button" href="#">Позвать!</a>
+      <a class="button card__btn" href="#">Позвать!</a>
       -->
     </div>
 
-    <a class="button site-users__button" href="#">Показать всех</a>
+    <a class="button cards__btn" href="#">Показать всех</a>
   </section>
 
   <section class="rates">
@@ -317,7 +289,7 @@
 </main>
 
 <footer class="footer">
-  <a class="logo logo--footer ">
+  <a class="footer__logo logo">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
